--- a/index.html
+++ b/index.html
@@ -1,1 +1,52 @@
-ECHO est† ativado.
+<!DOCTYPE html>
+
+<html lang="pt-br">
+
+<head>
+
+    <meta charset="utf-8">
+
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <title>Feira do Cear√°</title>
+
+    <link rel="stylesheet" type="text/css" href="style.css">
+
+</head>
+
+<body>
+
+    <div id="interface">
+        <section id="corpo">
+        <h1>Hello World!</h1>
+
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam pharetra turpis quis elit ullamcorper, quis varius magna gravida. Donec varius faucibus orci, vitae lobortis turpis pulvinar sed. Duis vel tellus nec nulla ultrices condimentum. Nam quis consequat arcu, non venenatis augue. Maecenas tempor lectus ac posuere scelerisque. Sed eu lacus efficitur, facilisis elit eu, sollicitudin libero. Nullam iaculis ipsum neque, eu pretium nisi consequat quis. Sed tempor velit at dui mattis, eu pellentesque quam ornare. Praesent id consequat ante. Fusce tempor nunc dui, eget lacinia justo faucibus ut. Integer id mollis augue, in aliquam tortor. Nam nec vehicula est. Vivamus finibus efficitur pretium. Aliquam quis mollis nisi. Vestibulum gravida diam vitae malesuada fringilla.</p><br>
+
+        <p>Aliquam erat volutpat. Donec vulputate purus et nibh tristique, quis consequat nisl luctus. Morbi in dolor id ex dignissim condimentum. Morbi mollis nisl et velit commodo, luctus varius sem pharetra. Vivamus commodo metus et diam pretium fringilla. Nunc rutrum euismod risus vitae tincidunt. Donec eget cursus turpis, et euismod justo. Pellentesque sit amet nisl mi. Nam id euismod lorem, ut tempor libero. Duis varius vel ligula ut tincidunt. Fusce blandit molestie enim, rutrum consequat urna consectetur lacinia. Mauris neque sem, semper quis auctor eget, lacinia vitae diam. Phasellus a lectus ut purus congue molestie. Sed in mauris in velit feugiat ultricies quis sit amet eros. Vivamus hendrerit vestibulum libero, vitae vehicula dolor suscipit feugiat. Mauris maximus porta ante, id varius arcu.</p><br>
+
+        <p>Praesent vel odio leo. Praesent ac risus turpis. Aliquam efficitur finibus arcu. Proin et ipsum quis dui blandit lobortis at sit amet arcu. Morbi non nibh congue, tempus magna id, dignissim leo. Donec scelerisque, turpis ornare tristique molestie, tortor odio mollis leo, et feugiat nunc ante in dolor. Aliquam efficitur lobortis cursus.</p><br>
+
+        <p>Nulla non justo pretium, vehicula augue vel, sagittis neque. Curabitur accumsan ut enim quis malesuada. Duis accumsan, dui vel iaculis rhoncus, leo orci cursus lectus, non suscipit leo enim ac lacus. Aenean turpis nisl, congue et placerat accumsan, rutrum a massa. Sed est dui, egestas rutrum ligula quis, placerat scelerisque ex. Vivamus turpis massa, aliquet ut sem non, molestie rutrum felis. Donec aliquet elit diam, eget pellentesque nisi varius vel. Integer a varius quam. Fusce porta malesuada sem sed imperdiet. Ut quis nisl elit. Nam at accumsan arcu.</p><br>
+
+        <p>Nam viverra, tellus sagittis ullamcorper pretium, ipsum arcu gravida dui, non semper tellus augue in ligula. Proin porttitor sapien a consequat pellentesque. Vestibulum risus lorem, scelerisque vitae aliquet at, vulputate tempor eros. Cras rhoncus at leo non faucibus. Donec tempus sollicitudin tortor, et commodo eros porta ac. Etiam nulla ex, scelerisque eget erat id, mollis porta enim. Ut a purus sit amet mi finibus bibendum. Nulla dignissim gravida porta. Donec vehicula cursus est, eu aliquam tellus pretium eget. Duis vulputate mi odio, ac semper est aliquet ut. Integer eu ligula sed ipsum pellentesque gravida ut ut felis. Quisque pharetra accumsan turpis eu dapibus. Etiam scelerisque commodo leo sed efficitur. Integer eros magna, pretium eget elit id, faucibus interdum dolor.</p><br>
+
+        <aside id="lateral">    
+            <img>
+            
+
+        </aside>    
+
+        </section>    
+
+        <footer id="rodape">
+            <p>
+            <a href="https://www.instagram.com/werbster_mt/?hl=pt-br">Instagram</a> &nbsp;||
+            <a href="https://www.facebook.com/werbstermarques.teixeira">Facebook</a></p>
+
+        </footer>
+
+</div>
+
+</body>    
+
+</html>
