--- a/projeto/index.html
+++ b/projeto/index.html
@@ -10,9 +10,8 @@
 
     <title>Feira do Ceará</title>
 
-    <link rel="stylesheet" type="text/css" href="projeto/_css/style.css">
+    <link rel="stylesheet" type="text/css" href="_css/style.css">
     
-
 </head>
 
 <body>
