--- a/projeto/index.html
+++ b/projeto/index.html
@@ -12,6 +12,12 @@
 
     <link rel="stylesheet" type="text/css" href="style.css">
     
+    <link rel="stylesheet" type="text/css" href="projeto/_css/style.css">
+
+    <link rel="stylesheet" type="text/css" href="C:\Users\wmarq\Feira-do-Ceara\projeto\_css\style.css">
+
+    <link rel="stylesheet" type="text/css" href="projeto\_css\style.css">
+
 </head>
 
 <body>
