--- a/projeto/index.html
+++ b/projeto/index.html
@@ -18,6 +18,8 @@
 
     <link rel="stylesheet" type="text/css" href="projeto\_css\style.css">
 
+    <link rel="stylesheet" type="text/css" href="https://github.com/Werbster99/Feira-do-Ceara/blob/master/projeto/_css/style.css">
+
 </head>
 
 <body>
