--- a/projeto/index.html
+++ b/projeto/index.html
@@ -23,7 +23,7 @@
         <h1>Pode crê</h1>
         <h2>Vai ser sal</h2>    
     </hgroup>
-        <img id="icone" src="projeto/._vetim.png">
+        <img id="icone" src="projeto/vetim.png">
 
 	<nav id="menu">
 		<ul>
