--- a/projeto/index.html
+++ b/projeto/index.html
@@ -10,7 +10,7 @@
 
     <title>Feira do Ceará</title>
 
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="https://werbster99.github.io/Feira-do-Ceara/projeto/css/style.css">
   
 </head>
 
@@ -23,7 +23,7 @@
         <h1>Pode crê</h1>
         <h2>Vai ser sal</h2>    
     </hgroup>
-        <img id="icone" src="projeto/vetim.png">
+        <img id="icone" src="https://werbster99.github.io/Feira-do-Ceara/projeto/imagens/vetim.png">
 
 	<nav id="menu">
 		<ul>
