--- a/projeto/index.html
+++ b/projeto/index.html
@@ -10,7 +10,7 @@
 
     <title>Feira do Ceará</title>
 
-    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="https://werbster99.github.io/Feira-do-Ceara/projeto/css/style.css">
     
 </head>
 
